Custom fonts added

--- a/index.html
+++ b/index.html
@@ -6,14 +6,26 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
+    <!-- CSS -->
+    <link rel="stylesheet" href="fonts/stylesheet.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="css/main.css">
+    
     <title>Title</title>
 </head>
 
 <body>
-    
-</body>
+    <div id="page" class="site">
+        <section class="section section-hero">
+            <div class="container-fluid">
+                <div class="section-hero-content">
+                    <img src="img/logo.png" alt="logo image">
+                    <p>En Colombia, desde el 2016 hasta septiembre de 2018, 295 defensores y defensoras de derechos humanos han sido asesinados y 1.046 amenazados, todo para que sus ideas no sean escuchadas.</p>
 
+                    <p>Es por eso, que la mejor forma de proteger a los que están amenazados en este momento es convirtiéndolos en el     centro de atención y compartiendo sus ideas con el mundo, para que todos puedan entender que su lucha trasciende sus comunidades, porque sencillamente sus voces son a prueba de balas.</p>
+                </div>
+            </div>
+        </section>
+    </div>
+</body>
 </html>
