all section added to desktop layout

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="fonts/stylesheet.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
-    
+
     <title>Title</title>
 </head>
 
@@ -18,14 +19,256 @@
     <div id="page" class="site">
         <section class="section section-hero">
             <div class="container-fluid">
-                <div class="section-hero-content">
+                <div class="section-content section-hero-content">
                     <img src="img/logo.png" alt="logo image">
+                    <hr>
                     <p>En Colombia, desde el 2016 hasta septiembre de 2018, 295 defensores y defensoras de derechos humanos han sido asesinados y 1.046 amenazados, todo para que sus ideas no sean escuchadas.</p>
 
-                    <p>Es por eso, que la mejor forma de proteger a los que están amenazados en este momento es convirtiéndolos en el     centro de atención y compartiendo sus ideas con el mundo, para que todos puedan entender que su lucha trasciende sus comunidades, porque sencillamente sus voces son a prueba de balas.</p>
+                    <p>Es por eso, que la mejor forma de proteger a los que están amenazados en este momento es convirtiéndolos en el centro de atención y compartiendo sus ideas con el mundo, para que todos puedan entender que su lucha trasciende sus comunidades, porque sencillamente sus voces son a prueba de balas.</p>
                 </div>
             </div>
         </section>
+        <section id="nelson-pacue" class="section section-bottom section-red d-flex flex-column justify-content-center">
+            <div class="section-container ml-auto">
+                <div class="section-content">
+                    <h2>NELSON PACUE</h2>
+                    <p>Es un defensor de los derechos humanos, es indígena y pertenece
+                        al resguardo Huellas Caloto en el Cauca. Ha sido maestro y gobernador
+                        de su comunidad, actualmente está amenazado por proteger
+                        su territorio ancestral de los desastres de la minería.</p>
+                    <div class="play-button">
+                        Entiende su lucha aquí
+                        <a href="#"><span class="sr-only">Play Video</span></a>
+                    </div>
+                </div>
+            </div>
+            <div class="social-icons">
+               <span>Comparte<br> su voz</span>
+               <a href="#" target="_blank"><i class="fab fa-facebook-f" aria-label="Facebook"></i></a>
+               <a href="#" target="_blank"><i class="fab fa-twitter" aria-label="Twitter"></i></a>
+               <a href="#" target="_blank"><i class="fab fa-instagram" aria-label="Instagram"></i></a>
+            </div>
+        </section><!-- #END Section -->
+        <section id="guillermo-perez" class="section section-bottom section-orange d-flex flex-column justify-content-center">
+            <div class="section-container">
+                <div class="section-content">
+                    <h2>GUILLERMO PÉREZ</h2>
+                    <p>Es un defensor de los derechos humanos, es director de la asociación
+de campesinos y comunidades sin tierra del Cesar. Este defensor está amenazado
+ya que arriesga a diario su vida por pedir la restitución de tierras
+y la salida de la minería de los territorios campesinos e indígenas
+en el Cesar  y la Guajira.</p>
+                    <div class="play-button">
+                        Entiende su lucha aquí
+                        <a href="#"><span class="sr-only">Play Video</span></a>
+                    </div>
+                </div>
+            </div>
+            <div class="social-icons">
+               <span>Comparte<br> su voz</span>
+               <a href="#" target="_blank"><i class="fab fa-facebook-f" aria-label="Facebook"></i></a>
+               <a href="#" target="_blank"><i class="fab fa-twitter" aria-label="Twitter"></i></a>
+               <a href="#" target="_blank"><i class="fab fa-instagram" aria-label="Instagram"></i></a>
+            </div>
+        </section><!-- #END Section -->
+        <section id="salome-melo" class="section section-bottom section-blue d-flex flex-column justify-content-center">
+            <div class="section-container ml-auto">
+                <div class="section-content">
+                    <h2>SALOMÉ MELO</h2>
+                    <p>Esta joven defensora de los derechos humanos, es de Nariño, actualmente
+es la secretaria departamental de Derechos Humanos en su región.
+Está amenazada por proteger a los jóvenes y apoyar
+la desmilitarización de los territorios.</p>
+                    <div class="play-button">
+                        Entiende su lucha aquí
+                        <a href="#"><span class="sr-only">Play Video</span></a>
+                    </div>
+                </div>
+            </div>
+            <div class="social-icons">
+               <span>Comparte<br> su voz</span>
+               <a href="#" target="_blank"><i class="fab fa-facebook-f" aria-label="Facebook"></i></a>
+               <a href="#" target="_blank"><i class="fab fa-twitter" aria-label="Twitter"></i></a>
+               <a href="#" target="_blank"><i class="fab fa-instagram" aria-label="Instagram"></i></a>
+            </div>
+        </section><!-- #END Section -->
+        <section id="erlendy-cuero" class="section section-bottom section-yellow d-flex flex-column justify-content-center">
+            <div class="section-container">
+                <div class="section-content">
+                    <h2>ERLENDY CUERO</h2>
+                    <p>Vive en Cali, pero nació en Buenaventura. Es una defensora
+de los derechos humanos que trabaja en AFRODES, la asociación
+de afrodescendientes desplazados más grande del país.
+Está amenazada por tratar de reivindicar los derechos de las comunidades afro,
+por reclamar dineros perdidos a las víctimas del conflicto armado y por luchar
+en contra del microtráfico.</p>
+                    <div class="play-button">
+                        Entiende su lucha aquí
+                        <a href="#"><span class="sr-only">Play Video</span></a>
+                    </div>
+                </div>
+            </div>
+            <div class="social-icons">
+               <span>Comparte<br> su voz</span>
+               <a href="#" target="_blank"><i class="fab fa-facebook-f" aria-label="Facebook"></i></a>
+               <a href="#" target="_blank"><i class="fab fa-twitter" aria-label="Twitter"></i></a>
+               <a href="#" target="_blank"><i class="fab fa-instagram" aria-label="Instagram"></i></a>
+            </div>
+        </section><!-- #END Section -->
+        <section id="gustavo-merchan" class="section section-bottom section-red2 d-flex flex-column justify-content-center">
+            <div class="section-container ml-auto">
+                <div class="section-content">
+                    <h2>GUSTAVO MERCHÁN</h2>
+                    <p>Vive en Cali, pero nació en Buenaventura. Es una defensora
+de los derechos humanos que trabaja en AFRODES, la asociación
+de afrodescendientes desplazados más grande del país.
+Está amenazada por tratar de reivindicar los derechos de las comunidades afro,
+por reclamar dineros perdidos a las víctimas del conflicto armado y por luchar
+en contra del microtráfico.</p>
+                    <div class="play-button">
+                        Entiende su lucha aquí
+                        <a href="#"><span class="sr-only">Play Video</span></a>
+                    </div>
+                </div>
+            </div>
+            <div class="social-icons">
+               <span>Comparte<br> su voz</span>
+               <a href="#" target="_blank"><i class="fab fa-facebook-f" aria-label="Facebook"></i></a>
+               <a href="#" target="_blank"><i class="fab fa-twitter" aria-label="Twitter"></i></a>
+               <a href="#" target="_blank"><i class="fab fa-instagram" aria-label="Instagram"></i></a>
+            </div>
+        </section><!-- #END Section -->
+        <section id="laura-weinstein" class="section section-bottom section-red3 d-flex flex-column justify-content-center">
+            <div class="section-container">
+                <div class="section-content">
+                    <h2>LAURA WEINSTEIN</h2>
+                    <p>Vive en Cali, pero nació en Buenaventura. Es una defensora
+de los derechos humanos que trabaja en AFRODES, la asociación
+de afrodescendientes desplazados más grande del país.
+Está amenazada por tratar de reivindicar los derechos de las comunidades afro,
+por reclamar dineros perdidos a las víctimas del conflicto armado y por luchar
+en contra del microtráfico.</p>
+                    <div class="play-button">
+                        Entiende su lucha aquí
+                        <a href="#"><span class="sr-only">Play Video</span></a>
+                    </div>
+                </div>
+            </div>
+            <div class="social-icons">
+               <span>Comparte<br> su voz</span>
+               <a href="#" target="_blank"><i class="fab fa-facebook-f" aria-label="Facebook"></i></a>
+               <a href="#" target="_blank"><i class="fab fa-twitter" aria-label="Twitter"></i></a>
+               <a href="#" target="_blank"><i class="fab fa-instagram" aria-label="Instagram"></i></a>
+            </div>
+        </section><!-- #END Section -->
+        <section id="martha-lopez" class="section section-bottom section-yellow2 d-flex flex-column justify-content-center">
+            <div class="section-container">
+                <div class="section-content">
+                    <h2>MARTHA LÓPEZ</h2>
+                    <p>Es una mujer de origen campesino. Empezó como lideresa social
+y defensora de derechos humanos en el municipio de Apartadó (Antioquia)
+en la junta de acción comunal y como profesora voluntaria de 150 niños
+y niñas que no tenían garantizado este derecho. Decidió creer en la educación
+de los más pequeños como el camino para cambiar su realidad. Hoy se encuentra amenazada por proteger los de derechos de los campesinos, los niños, los indígenas
+y los afros.</p>
+                    <div class="play-button">
+                        Entiende su lucha aquí
+                        <a href="#"><span class="sr-only">Play Video</span></a>
+                    </div>
+                </div>
+            </div>
+            <div class="social-icons">
+               <span>Comparte<br> su voz</span>
+               <a href="#" target="_blank"><i class="fab fa-facebook-f" aria-label="Facebook"></i></a>
+               <a href="#" target="_blank"><i class="fab fa-twitter" aria-label="Twitter"></i></a>
+               <a href="#" target="_blank"><i class="fab fa-instagram" aria-label="Instagram"></i></a>
+            </div>
+        </section><!-- #END Section --> 
+        <section id="martha-rajos" class="section section-bottom section-red4 d-flex flex-column justify-content-center">
+            <div class="section-container">
+                <div class="section-content">
+                    <h2>MARTHA ROJAS</h2>
+                    <p>Nació en La Tebaida, Quindio, su lucha empezó como presidenta de una Junta de Acción Comunal (JAC) en este municipio. Junto a su equipo de trabajo lograron sacar 10 equipo
+de fútbol con niños de 8, 9 y 10 años, recuperaron polideportivos, lograron la pavimentación de andenes, calles y consiguieron alumbrados públicos para su barrio.
+Desafortunadamente hoy se encuentra amenazada por proteger los derechos
+de su comunidad
+del crimen organizado y la drogadicción.</p>
+                    <div class="play-button">
+                        Entiende su lucha aquí
+                        <a href="#"><span class="sr-only">Play Video</span></a>
+                    </div>
+                </div>
+            </div>
+            <div class="social-icons">
+               <span>Comparte<br> su voz</span>
+               <a href="#" target="_blank"><i class="fab fa-facebook-f" aria-label="Facebook"></i></a>
+               <a href="#" target="_blank"><i class="fab fa-twitter" aria-label="Twitter"></i></a>
+               <a href="#" target="_blank"><i class="fab fa-instagram" aria-label="Instagram"></i></a>
+            </div>
+        </section><!-- #END Section --> 
+        <section id="luis-perez" class="section section-bottom section-blue2 d-flex flex-column justify-content-center">
+            <div class="section-container">
+                <div class="section-content">
+                    <h2>LUIS PÉREZ</h2>
+                    <p>Es un campesino de pura cepa, hace parte del Comité de Integración Social del Catatumbo. Ha trabajado por brindarle a su comunidad espacios en los que puedan disfrutar del arte,
+la cultura y además profundizar en sus saberes. Ha decidido continuar con el legado de su familia y luchar por la defensa de los derechos humanos y, sobre todo, de la madre tierra.
+Está amenazado por proteger a los a los campesinos de su región.</p>
+                    <div class="play-button">
+                        Entiende su lucha aquí
+                        <a href="#"><span class="sr-only">Play Video</span></a>
+                    </div>
+                </div>
+            </div>
+            <div class="social-icons">
+               <span>Comparte<br> su voz</span>
+               <a href="#" target="_blank"><i class="fab fa-facebook-f" aria-label="Facebook"></i></a>
+               <a href="#" target="_blank"><i class="fab fa-twitter" aria-label="Twitter"></i></a>
+               <a href="#" target="_blank"><i class="fab fa-instagram" aria-label="Instagram"></i></a>
+            </div>
+        </section><!-- #END Section --> 
+        <section id="carolina-sanchez" class="section section-bottom section-zinc d-flex flex-column justify-content-center">
+            <div class="section-container">
+                <div class="section-content">
+                    <h2>CAROLINA SÁNCHEZ</h2>
+                    <p>Es una estudiante de Derecho de la Universidad del Cauca. Líder social y defensora de derechos humanos de la Organización  para el desarrollo urbano y campesino (Ordeurca), Decidió entrar a esa organización y empezar a trabajar por los más jóvenes, para que ellos conozcan sus territorios y puedan entender que el río es su fuente de vida y desarrollo,
+que deben cuidar la tierra en la que viven y sobre todo empoderarse con su herencia. Actualmente se encuentra amenazada
+por proteger los recursos naturales de Colombia.
+del crimen organizado y la drogadicción.</p>
+                    <div class="play-button">
+                        Entiende su lucha aquí
+                        <a href="#"><span class="sr-only">Play Video</span></a>
+                    </div>
+                </div>
+            </div>
+            <div class="social-icons">
+               <span>Comparte<br> su voz</span>
+               <a href="#" target="_blank"><i class="fab fa-facebook-f" aria-label="Facebook"></i></a>
+               <a href="#" target="_blank"><i class="fab fa-twitter" aria-label="Twitter"></i></a>
+               <a href="#" target="_blank"><i class="fab fa-instagram" aria-label="Instagram"></i></a>
+            </div>
+        </section><!-- #END Section --> 
+        <section id="cecilia-mantilla" class="section section-bottom section-blue3 d-flex flex-column justify-content-center">
+            <div class="section-container">
+                <div class="section-content">
+                    <h2>CECILIA MANTILLA</h2>
+                    <p>Es una estudiante de Derecho de la Universidad del Cauca. Líder social y defensora de derechos humanos de la Organización  para el desarrollo urbano y campesino (Ordeurca), Decidió entrar a esa organización y empezar a trabajar por los más jóvenes, para que ellos conozcan sus territorios y puedan entender que el río es su fuente de vida y desarrollo,
+que deben cuidar la tierra en la que viven y sobre todo empoderarse con su herencia. Actualmente se encuentra amenazada
+por proteger los recursos naturales de Colombia.
+del crimen organizado y la drogadicción.</p>
+                    <div class="play-button">
+                        Entiende su lucha aquí
+                        <a href="#"><span class="sr-only">Play Video</span></a>
+                    </div>
+                </div>
+            </div>
+            <div class="social-icons">
+               <span>Comparte<br> su voz</span>
+               <a href="#" target="_blank"><i class="fab fa-facebook-f" aria-label="Facebook"></i></a>
+               <a href="#" target="_blank"><i class="fab fa-twitter" aria-label="Twitter"></i></a>
+               <a href="#" target="_blank"><i class="fab fa-instagram" aria-label="Instagram"></i></a>
+            </div>
+        </section><!-- #END Section --> 
     </div>
 </body>
+
 </html>
