Mobile layout is updated

--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
                     <p>Es por eso, que la mejor forma de proteger a los que están amenazados en este momento es convirtiéndolos en el centro de atención y compartiendo sus ideas con el mundo, para que todos puedan entender que su lucha trasciende sus comunidades, porque sencillamente sus voces son a prueba de balas.</p>
                 </div>
             </div>
+            <img class="d-md-none" src="img/phone/hero-xs.jpg" alt="Hero Image">
         </section>
-        <section id="nelson-pacue" class="section section-bottom section-red d-flex flex-column justify-content-center">
+        <section id="nelson-pacue" class="section section-bottom section-red d-md-flex flex-column justify-content-center">
+            <img src="img/phone/nelson.jpg" alt="NELSON PACUE" class="d-md-none">
             <div class="section-container ml-auto">
                 <div class="section-content">
                     <h2>NELSON PACUE</h2>
@@ -49,7 +51,8 @@
                <a href="#" target="_blank"><i class="fab fa-instagram" aria-label="Instagram"></i></a>
             </div>
         </section><!-- #END Section -->
-        <section id="guillermo-perez" class="section section-bottom section-orange d-flex flex-column justify-content-center">
+        <section id="guillermo-perez" class="section section-bottom section-orange d-md-flex flex-column justify-content-center">
+            <img src="img/phone/guillermo.jpg" alt="GUILLERMO PÉREZ" class="d-md-none">
             <div class="section-container">
                 <div class="section-content">
                     <h2>GUILLERMO PÉREZ</h2>
@@ -71,7 +74,8 @@ en el Cesar  y la Guajira.</p>
                <a href="#" target="_blank"><i class="fab fa-instagram" aria-label="Instagram"></i></a>
             </div>
         </section><!-- #END Section -->
-        <section id="salome-melo" class="section section-bottom section-blue d-flex flex-column justify-content-center">
+        <section id="salome-melo" class="section section-bottom section-blue d-md-flex flex-column justify-content-center">
+            <img src="img/phone/salome.jpg" alt="SALOMÉ MELO" class="d-md-none">   
             <div class="section-container ml-auto">
                 <div class="section-content">
                     <h2>SALOMÉ MELO</h2>
@@ -92,7 +96,8 @@ la desmilitarización de los territorios.</p>
                <a href="#" target="_blank"><i class="fab fa-instagram" aria-label="Instagram"></i></a>
             </div>
         </section><!-- #END Section -->
-        <section id="erlendy-cuero" class="section section-bottom section-yellow d-flex flex-column justify-content-center">
+        <section id="erlendy-cuero" class="section section-bottom section-yellow d-md-flex  flex-column justify-content-center">
+            <img src="img/phone/elrendy.jpg" alt="Erlendy Cuero" class="d-md-none"> 
             <div class="section-container">
                 <div class="section-content">
                     <h2>ERLENDY CUERO</h2>
@@ -115,7 +120,8 @@ en contra del microtráfico.</p>
                <a href="#" target="_blank"><i class="fab fa-instagram" aria-label="Instagram"></i></a>
             </div>
         </section><!-- #END Section -->
-        <section id="gustavo-merchan" class="section section-bottom section-red2 d-flex flex-column justify-content-center">
+        <section id="gustavo-merchan" class="section section-bottom section-red2 d-md-flex  flex-column justify-content-center">
+            <img src="img/phone/gustavo.jpg" alt="GUSTAVO MERCHÁN" class="d-md-none"> 
             <div class="section-container ml-auto">
                 <div class="section-content">
                     <h2>GUSTAVO MERCHÁN</h2>
@@ -138,7 +144,8 @@ en contra del microtráfico.</p>
                <a href="#" target="_blank"><i class="fab fa-instagram" aria-label="Instagram"></i></a>
             </div>
         </section><!-- #END Section -->
-        <section id="laura-weinstein" class="section section-bottom section-red3 d-flex flex-column justify-content-center">
+        <section id="laura-weinstein" class="section section-bottom section-red3 d-md-flex  flex-column justify-content-center">
+            <img src="img/phone/laura.jpg" alt="LAURA WEINSTEIN" class="d-md-none"> 
             <div class="section-container">
                 <div class="section-content">
                     <h2>LAURA WEINSTEIN</h2>
@@ -161,7 +168,8 @@ en contra del microtráfico.</p>
                <a href="#" target="_blank"><i class="fab fa-instagram" aria-label="Instagram"></i></a>
             </div>
         </section><!-- #END Section -->
-        <section id="martha-lopez" class="section section-bottom section-yellow2 d-flex flex-column justify-content-center">
+        <section id="martha-lopez" class="section section-bottom section-yellow2 d-md-flex  flex-column justify-content-center">
+            <img src="img/phone/martha.jpg" alt="Martha Lopez" class="d-md-none">
             <div class="section-container">
                 <div class="section-content">
                     <h2>MARTHA LÓPEZ</h2>
@@ -184,7 +192,8 @@ y los afros.</p>
                <a href="#" target="_blank"><i class="fab fa-instagram" aria-label="Instagram"></i></a>
             </div>
         </section><!-- #END Section --> 
-        <section id="martha-rajos" class="section section-bottom section-red4 d-flex flex-column justify-content-center">
+        <section id="martha-rajos" class="section section-bottom section-red4 d-md-flex  flex-column justify-content-center">
+            <img src="img/phone/martha2.jpg" alt="Martha Rojas" class="d-md-none">
             <div class="section-container">
                 <div class="section-content">
                     <h2>MARTHA ROJAS</h2>
@@ -206,7 +215,8 @@ del crimen organizado y la drogadicción.</p>
                <a href="#" target="_blank"><i class="fab fa-instagram" aria-label="Instagram"></i></a>
             </div>
         </section><!-- #END Section --> 
-        <section id="luis-perez" class="section section-bottom section-blue2 d-flex flex-column justify-content-center">
+        <section id="luis-perez" class="section section-bottom section-blue2 d-md-flex flex-column justify-content-center">
+            <img src="img/phone/luis.jpg" alt="Luis Perez" class="d-md-none">
             <div class="section-container">
                 <div class="section-content">
                     <h2>LUIS PÉREZ</h2>
@@ -226,7 +236,8 @@ Está amenazado por proteger a los a los campesinos de su región.</p>
                <a href="#" target="_blank"><i class="fab fa-instagram" aria-label="Instagram"></i></a>
             </div>
         </section><!-- #END Section --> 
-        <section id="carolina-sanchez" class="section section-bottom section-zinc d-flex flex-column justify-content-center">
+        <section id="carolina-sanchez" class="section section-bottom section-zinc d-md-flex flex-column justify-content-center">
+            <img src="img/phone/calorina.jpg" alt="Carolina Sanchez" class="d-md-none">
             <div class="section-container">
                 <div class="section-content">
                     <h2>CAROLINA SÁNCHEZ</h2>
@@ -247,7 +258,8 @@ del crimen organizado y la drogadicción.</p>
                <a href="#" target="_blank"><i class="fab fa-instagram" aria-label="Instagram"></i></a>
             </div>
         </section><!-- #END Section --> 
-        <section id="cecilia-mantilla" class="section section-bottom section-blue3 d-flex flex-column justify-content-center">
+        <section id="cecilia-mantilla" class="section section-bottom section-blue3 d-md-flex flex-column justify-content-center">
+            <img src="img/phone/cecilla.jpg" alt="Cecilia Mantilla" class="d-md-none">
             <div class="section-container">
                 <div class="section-content">
                     <h2>CECILIA MANTILLA</h2>
